Update commercetools-sync-java to v10.0.0
* Install sync-java-version 10 beta and change http client.

* Migrate abstract syncer (#484)

* Migrate abstract syncer, utils and tests (only compilable)

* Adjust javadoc

* Use consistent return type

* Make syncer implementation compilable (#485)

* Migrate abstract syncer, utils and tests (only compilable)

* Adjust javadoc

* Adjust signature of syncer subclasses and fix code

* Formatting

* Remove unused constant

* Comment not compilable unittests

* Migrate SyncerFactory and CliRunner (#496)

* Migrate SyncerFactory

* Migrate client utils and rename

* Migrate CliRunner

* Migrate unittests for SyncerFactory

* Migrate unittests for CLIRunner

* Cleanup test code

* Add final modifier

Co-authored-by: Lam Tran <lam.tran@commercetools.com>

---------

Co-authored-by: Lam Tran <lam.tran@commercetools.com>

* Approved tasks from syncer factory base (#497)

* Migrate SyncerFactory

* Migrate client utils and rename

* Migrate CliRunner

* Migrate unittests for SyncerFactory

* Migrate unittests for CLIRunner

* Cleanup test code

* DEVX-259 fix tests (#494)

* DEVX-246 migrate solution info (#491)

---------

Co-authored-by: Lam Tran <lam.tran@commercetools.com>

* Fix spotbugs violations

* DEVX-247 migrate category syncer (#498)

* Revert "Fix spotbugs violations"

This reverts commit 31da628e8809d82c6babc53841e8ea862938fc77.

* Delete unused variable

* DEVX-248 migrate inventory sync (#499)

* Migrate SyncerFactory

* Migrate client utils and rename

* Migrate CliRunner

* Migrate unittests for SyncerFactory

* Migrate unittests for CLIRunner

* Cleanup test code

* DEVX-247 migrate category syncr

* DEVX-247 fix spotbugs

* DEVX-247 rename variable

* DEVX-247 rename variable

* DEVX-248 migrate inventory syncer

* DEVX-248 refactor category syncer test

* DEVX-248 refactor code

* DEVX-248 fix formatting
